# b3rb_desktop

b3rb_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
b3rb_rviz_plugins/include/b3rb_rviz_plugins/: b3rb_panel.hpp
b3rb_rviz_plugins/src/: b3rb_panel.cpp
